# ReaderWin

./: AGENTS.md  README.md  package-lock.json  package.json  sample_source.json
.github/workflows/: release.yml
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/components/: BookCard.tsx  BookshelfView.tsx  NavButton.tsx  SettingsView.tsx  VirtualTocList.tsx  icons.tsx
src/components/reader/: ReaderMenu.tsx  ReaderView.tsx  SearchOverlay.tsx  TocOverlay.tsx
src/hooks/: useReader.ts  useSettings.ts
