[package]
name = "tauri-app"
version = "0.1.9"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13.2", features = ["json"] }
scraper = "0.25.0"
tokio = { version = "1.50.0", features = ["full"] }
tauri-plugin-sql = { version = "2.3.2", features = ["sqlite"] }
tauri-plugin-dialog = "2.6.0"
tauri-plugin-updater = "2"
tauri-plugin-fs = "2.4.5"
regex = "1.12.3"
encoding_rs = "0.8.35"
epub = "1.2.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

